--- a/resources/main.css
+++ b/resources/main.css
@@ -1,3 +1,5 @@
+/* pagina nu se incadreaza in viewport, este scroll attat orizontal, cat si vertical, incomodeaza din punct de vedere al UX */
+
 html, body {
     width: 100%;
     height: 100%;
@@ -6,6 +8,7 @@ html, body {
 }
 
 .layout-width {
+    /* de ce limitam aici width-ul? */
     width: 1400px;
     margin: 0 auto;
 }
